# KernelView

./: pyproject.toml  readme.md
kernelview/: core.py
