# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelview"
version = "1.0.0"
description = "A system information tool with Debian-themed output"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "psutil>=5.0",
    "colorama>=0.4.6",
]

[project.scripts]
kernelview = "kernelview.cli:main"