# pyproject.toml
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelview"
version = "1.0.0"
description = "KernelView is a modern and powerful system information tool built in python."
authors = [
    {name = "Soumyajit Das", email = "pheonix85+dev@proton.me"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
dependencies = [
    "psutil>=5.0",
    "setuptools>=59.6.0",
    "winreg; sys_platform == 'win32'",
    "ctypes; sys_platform == 'win32'",
]

[project.scripts]
kernelview = "kernelview.cli:main"
